--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ services:
     - docker
 
 before_install:
-    - docker build -t roaslin/single-client -f Dockerfile .
+    - docker build -t roaslin/single-client -f Dockerfile.dev .
 scripts:
     - docker run -e CI=true roaslin/single-client npm run test
  
